crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E221_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 3
    column: 5
  end_location:
    row: 3
    column: 5
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 5
    column: 1
  end_location:
    row: 5
    column: 1
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 6
    column: 1
  end_location:
    row: 6
    column: 1
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 9
    column: 4
  end_location:
    row: 9
    column: 4
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 10
    column: 4
  end_location:
    row: 10
    column: 4
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 13
    column: 8
  end_location:
    row: 13
    column: 8
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 15
    column: 8
  end_location:
    row: 15
    column: 8
  fix: ~
  parent: ~
- kind:
    name: MultipleSpacesBeforeOperator
    body: Multiple spaces before operator
    commit: ~
    fixable: false
  location:
    row: 19
    column: 13
  end_location:
    row: 19
    column: 13
  fix: ~
  parent: ~

