crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E222_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E22.py:28:8: E222 Multiple spaces after operator
   |
28 | #: E222
29 | a = a +  1
   |         E222
30 | b = b + 10
31 | #: E222 E222
   |

./resources/test/fixtures/pycodestyle/E22.py:31:4: E222 Multiple spaces after operator
   |
31 | b = b + 10
32 | #: E222 E222
33 | x =            -1
   |     E222
34 | y =            -2
35 | long_variable = 3
   |

./resources/test/fixtures/pycodestyle/E22.py:32:4: E222 Multiple spaces after operator
   |
32 | #: E222 E222
33 | x =            -1
34 | y =            -2
   |     E222
35 | long_variable = 3
36 | #: E222 E222
   |

./resources/test/fixtures/pycodestyle/E22.py:35:7: E222 Multiple spaces after operator
   |
35 | long_variable = 3
36 | #: E222 E222
37 | x[0] =          1
   |        E222
38 | x[1] =          2
39 | long_variable = 3
   |

./resources/test/fixtures/pycodestyle/E22.py:36:7: E222 Multiple spaces after operator
   |
36 | #: E222 E222
37 | x[0] =          1
38 | x[1] =          2
   |        E222
39 | long_variable = 3
40 | #:
   |


