crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E223_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    name: TabBeforeOperator
    body: Tab before operator
    commit: ~
    fixable: false
  location:
    row: 43
    column: 1
  end_location:
    row: 43
    column: 1
  fix: ~
  parent: ~

