crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E224_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E22.py:48:5: E224 Tab after operator
   |
48 | #: E224
49 | a +=    1
   |     ^^^^ E224
50 | b += 1000
51 | #:
   |


