crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E225_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E22.py:54:11: E225 Missing whitespace around operator
   |
54 | #: E225
55 | submitted +=1
   |           ^^ E225
56 | #: E225
57 | submitted+= 1
   |

E22.py:56:10: E225 Missing whitespace around operator
   |
56 | submitted +=1
57 | #: E225
58 | submitted+= 1
   |          ^^ E225
59 | #: E225
60 | c =-1
   |

E22.py:58:3: E225 Missing whitespace around operator
   |
58 | submitted+= 1
59 | #: E225
60 | c =-1
   |   ^ E225
61 | #: E225
62 | x = x /2 - 1
   |

E22.py:60:7: E225 Missing whitespace around operator
   |
60 | c =-1
61 | #: E225
62 | x = x /2 - 1
   |       ^ E225
63 | #: E225
64 | c = alpha -4
   |

E22.py:62:11: E225 Missing whitespace around operator
   |
62 | x = x /2 - 1
63 | #: E225
64 | c = alpha -4
   |           ^ E225
65 | #: E225
66 | c = alpha- 4
   |

E22.py:64:10: E225 Missing whitespace around operator
   |
64 | c = alpha -4
65 | #: E225
66 | c = alpha- 4
   |          ^ E225
67 | #: E225
68 | z = x **y
   |

E22.py:66:7: E225 Missing whitespace around operator
   |
66 | c = alpha- 4
67 | #: E225
68 | z = x **y
   |       ^^ E225
69 | #: E225
70 | z = (x + 1) **y
   |

E22.py:68:13: E225 Missing whitespace around operator
   |
68 | z = x **y
69 | #: E225
70 | z = (x + 1) **y
   |             ^^ E225
71 | #: E225
72 | z = (x + 1)** y
   |

E22.py:70:12: E225 Missing whitespace around operator
   |
70 | z = (x + 1) **y
71 | #: E225
72 | z = (x + 1)** y
   |            ^^ E225
73 | #: E225
74 | _1kB = _1MB >>10
   |

E22.py:72:13: E225 Missing whitespace around operator
   |
72 | z = (x + 1)** y
73 | #: E225
74 | _1kB = _1MB >>10
   |             ^^ E225
75 | #: E225
76 | _1kB = _1MB>> 10
   |

E22.py:74:12: E225 Missing whitespace around operator
   |
74 | _1kB = _1MB >>10
75 | #: E225
76 | _1kB = _1MB>> 10
   |            ^^ E225
77 | #: E225 E225
78 | i=i+ 1
   |

E22.py:76:2: E225 Missing whitespace around operator
   |
76 | _1kB = _1MB>> 10
77 | #: E225 E225
78 | i=i+ 1
   |  ^ E225
79 | #: E225 E225
80 | i=i +1
   |

E22.py:76:4: E225 Missing whitespace around operator
   |
76 | _1kB = _1MB>> 10
77 | #: E225 E225
78 | i=i+ 1
   |    ^ E225
79 | #: E225 E225
80 | i=i +1
   |

E22.py:78:2: E225 Missing whitespace around operator
   |
78 | i=i+ 1
79 | #: E225 E225
80 | i=i +1
   |  ^ E225
81 | #: E225
82 | i = 1and 1
   |

E22.py:78:5: E225 Missing whitespace around operator
   |
78 | i=i+ 1
79 | #: E225 E225
80 | i=i +1
   |     ^ E225
81 | #: E225
82 | i = 1and 1
   |

E22.py:80:6: E225 Missing whitespace around operator
   |
80 | i=i +1
81 | #: E225
82 | i = 1and 1
   |      ^^^ E225
83 | #: E225
84 | i = 1or 0
   |

E22.py:82:6: E225 Missing whitespace around operator
   |
82 | i = 1and 1
83 | #: E225
84 | i = 1or 0
   |      ^^ E225
85 | #: E225
86 | 1is 1
   |

E22.py:84:2: E225 Missing whitespace around operator
   |
84 | i = 1or 0
85 | #: E225
86 | 1is 1
   |  ^^ E225
87 | #: E225
88 | 1in []
   |

E22.py:86:2: E225 Missing whitespace around operator
   |
86 | 1is 1
87 | #: E225
88 | 1in []
   |  ^^ E225
89 | #: E225
90 | i = 1 @2
   |

E22.py:88:7: E225 Missing whitespace around operator
   |
88 | 1in []
89 | #: E225
90 | i = 1 @2
   |       ^ E225
91 | #: E225
92 | i = 1@ 2
   |

E22.py:90:6: E225 Missing whitespace around operator
   |
90 | i = 1 @2
91 | #: E225
92 | i = 1@ 2
   |      ^ E225
93 | #: E225 E226
94 | i=i+1
   |

E22.py:92:2: E225 Missing whitespace around operator
   |
92 | i = 1@ 2
93 | #: E225 E226
94 | i=i+1
   |  ^ E225
95 | #: E225 E226
96 | i =i+1
   |

E22.py:94:3: E225 Missing whitespace around operator
   |
94 | i=i+1
95 | #: E225 E226
96 | i =i+1
   |   ^ E225
97 | #: E225 E226
98 | i= i+1
   |

E22.py:96:2: E225 Missing whitespace around operator
    |
 96 | i =i+1
 97 | #: E225 E226
 98 | i= i+1
    |  ^ E225
 99 | #: E225 E226
100 | c = (a +b)*(a - b)
    |

E22.py:98:8: E225 Missing whitespace around operator
    |
 98 | i= i+1
 99 | #: E225 E226
100 | c = (a +b)*(a - b)
    |        ^ E225
101 | #: E225 E226
102 | c = (a+ b)*(a - b)
    |

E22.py:100:7: E225 Missing whitespace around operator
    |
100 | c = (a +b)*(a - b)
101 | #: E225 E226
102 | c = (a+ b)*(a - b)
    |       ^ E225
103 | #:
    |

E22.py:154:11: E225 Missing whitespace around operator
    |
154 | func2(lambda a, b=h[:], c=0: (a, b, c))
155 | if not -5 < x < +5:
156 |     print >>sys.stderr, "x is out of range."
    |           ^^ E225
157 | print >> sys.stdout, "x is an integer."
158 | x = x / 2 - 1
    |


