crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E227_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E22.py:121:12: E227 Missing whitespace around bitwise or shift operator
    |
121 |     return (i//2 for i in range(n))
122 | #: E227
123 | _1kB = _1MB>>10
    |             E227
124 | #: E227
125 | _1MB = _1kB<<10
    |

./resources/test/fixtures/pycodestyle/E22.py:123:12: E227 Missing whitespace around bitwise or shift operator
    |
123 | _1kB = _1MB>>10
124 | #: E227
125 | _1MB = _1kB<<10
    |             E227
126 | #: E227
127 | a = b|c
    |

./resources/test/fixtures/pycodestyle/E22.py:125:6: E227 Missing whitespace around bitwise or shift operator
    |
125 | _1MB = _1kB<<10
126 | #: E227
127 | a = b|c
    |       E227
128 | #: E227
129 | b = c&a
    |

./resources/test/fixtures/pycodestyle/E22.py:127:6: E227 Missing whitespace around bitwise or shift operator
    |
127 | a = b|c
128 | #: E227
129 | b = c&a
    |       E227
130 | #: E227
131 | c = b^a
    |

./resources/test/fixtures/pycodestyle/E22.py:129:6: E227 Missing whitespace around bitwise or shift operator
    |
129 | b = c&a
130 | #: E227
131 | c = b^a
    |       E227
132 | #: E228
133 | a = b%c
    |


