crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E228_E22.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- - kind:
      name: MissingWhitespaceAroundModuloOperator
      body: Missing whitespace around modulo operator
      suggestion: ~
      fixable: false
    location:
      row: 131
      column: 5
    end_location:
      row: 131
      column: 5
    fix: ~
    parent: ~
  - kind:
      name: MissingWhitespaceAroundModuloOperator
      body: Missing whitespace around modulo operator
      suggestion: ~
      fixable: false
    location:
      row: 133
      column: 9
    end_location:
      row: 133
      column: 9
    fix: ~
    parent: ~
  - kind:
      name: MissingWhitespaceAroundModuloOperator
      body: Missing whitespace around modulo operator
      suggestion: ~
      fixable: false
    location:
      row: 135
      column: 25
    end_location:
      row: 135
      column: 25
    fix: ~
    parent: ~

