crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E242_E24.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
E24.py:6:8: E242 Tab after comma
  |
4 | b = (1, 20)
5 | #: E242
6 | a = (1, 2)  # tab before 2
  |        ^ E242
7 | #: Okay
8 | b = (1, 20)  # space before 20
  |


