crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E251_E25.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 2
    column: 11
  end_location:
    row: 2
    column: 11
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 2
    column: 13
  end_location:
    row: 2
    column: 13
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 6
    column: 8
  end_location:
    row: 6
    column: 8
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 8
    column: 7
  end_location:
    row: 8
    column: 7
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 10
    column: 7
  end_location:
    row: 10
    column: 7
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 10
    column: 9
  end_location:
    row: 10
    column: 9
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 12
    column: 13
  end_location:
    row: 12
    column: 13
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 15
    column: 28
  end_location:
    row: 15
    column: 28
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 18
    column: 44
  end_location:
    row: 18
    column: 44
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 23
    column: 7
  end_location:
    row: 23
    column: 7
  fix: ~
  parent: ~
- kind:
    UnexpectedSpacesAroundKeywordParameterEquals: ~
  location:
    row: 23
    column: 9
  end_location:
    row: 23
    column: 9
  fix: ~
  parent: ~

