crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E252_E25.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
expression: diagnostics
---
- kind:
    MissingWhitespaceAroundParameterEquals: ~
  location:
    row: 46
    column: 14
  end_location:
    row: 46
    column: 14
  fix: ~
  parent: ~
- kind:
    MissingWhitespaceAroundParameterEquals: ~
  location:
    row: 46
    column: 15
  end_location:
    row: 46
    column: 15
  fix: ~
  parent: ~
- kind:
    MissingWhitespaceAroundParameterEquals: ~
  location:
    row: 46
    column: 26
  end_location:
    row: 46
    column: 26
  fix: ~
  parent: ~
- kind:
    MissingWhitespaceAroundParameterEquals: ~
  location:
    row: 46
    column: 35
  end_location:
    row: 46
    column: 35
  fix: ~
  parent: ~

