crates/ruff/src/rules/pycodestyle/snapshots/ruff__rules__pycodestyle__tests__E261_E26.py.snap
---
source: crates/ruff/src/rules/pycodestyle/mod.rs
---
./resources/test/fixtures/pycodestyle/E26.py:2:5: E261 Insert at least two spaces before an inline comment
  |
2 | #: E261:1:5
3 | pass # an inline comment
  |     ^ E261
4 | #: E262:1:12
5 | x = x + 1  #Increment x
  |


